# hdaqp-experiments

./: .gitignore  CMakeLists.txt  visualize.py
mpc-example/: Project.toml  main.jl  model.jl  obstacles.jl  simulate.jl
tests/: 00_basic.cpp  CMakeLists.txt  lexls_interface.hpp  nipm_interface.hpp  random_experiments.cpp
